--- a/package.json
+++ b/package.json
@@ -8,15 +8,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.2",
+    "@heroicons/react": "^1.0.5",
+    "@supabase/supabase-js": "^1.28.5",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-quilljs": "^1.2.17",
+    "sass": "^1.45.0"
   },
   "devDependencies": {
     "@types/node": "17.0.0",
+    "@types/quill": "^2.0.9",
     "@types/react": "17.0.37",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
+    "tailwindcss": "^3.0.7",
     "typescript": "4.5.4"
   }
 }
