--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
     "@supabase/supabase-js": "^1.28.5",
+    "@tiptap/react": "^2.0.0-beta.105",
+    "@tiptap/starter-kit": "^2.0.0-beta.171",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
